--- a/PRIMERHTML5.html
+++ b/PRIMERHTML5.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8"
 	<title>HTML5</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link href="<link href=https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 </head>
 <body>
 	<header>
