Continuacion del index 14 oct 2016

--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title> Practica 01 CSS3</title>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
 	<header>
 		<img src="img/resplandor.png" alt="">
-		<img src="img/logo.png">
+		<img id="logo" src="img/logo.png">
 		<nav>
 			<ul>
 				<li>Inicio</li>
@@ -20,7 +21,7 @@
 		</nav>
 		<form action="">
 			<input type="search" placeholder="Buscar aqui...">
-			<input type="button" value="Buscar">
+			<input type="button" value="buscar">
 		</form>
 	</header>
 
