lunes 17 octubre agregamos

--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -25,15 +25,15 @@
 		</form>
 	</header>
 
-	<section>
+	<section id="seccion01">
 		<article>
 			<img src="img/slide2.jpg" alt="Slide principal">
 		</article>
 	</section>
-	<section>
+	<section id="seccion02">
 		<article>
 			<img src="img/separador.jpg" > <br>
-			<span> Una seccion</span><br>
+			<span class="unaseccion"> Una seccion</span><br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -45,7 +45,7 @@
 		</article>
 		<article>
 			<img src="img/separador.jpg" > <br>
-			<span> Otra seccion</span><br>
+			<span class="otraseccion"> Otra seccion</span><br>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -60,12 +60,12 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			<p>
-			<input type="button" value="Ver mas">
+			<input class="botonsito" type="button" value="Ver mas">
 		</article>
 		<article>
 			<img src="img/separador.jpg">
 			<br>
-			<span>Un video</span>
+			<span class="otraseccion">Un video</span>
 			<br>
 			<img src="img/video.jpg">
 		</article>
