--- a/css02/INDEX.html
+++ b/css02/INDEX.html
@@ -1,26 +1,46 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="es">
 <head>
-	<meta charset="utf-8">
-	<title>Practica 02 CSS3</title>
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<meta charset="UTF-8">
+	<title> Práctica 02 CSS3</title>
+	<link rel="stylesheet" type="text/css" href="css/Estilos.css">
+
 </head>
 <body>
-	<HEADER>
+	<header>
 		<img src="img/banner.png">
 		<img src="img/granthams.png" id="granthams">
 		<img src="img/paint.png" id="paint">
-		<input type="search" placeholder="search" size=25 name="">  <!-- //name=envio de datos -->
+		<input type="search" placeholder="Search" size=25>
 		<nav>
 			<ul>
 				<li>Print</li>
-				<li>Ciot</li>
+				<li>Copy</li>
 				<li>Finishing</li>
 				<li>Design</li>
 				<li>Exhibition</li>
 			</ul>
 		</nav>
-	</HEADER>
+	</header>
+	<section id="primerseccion">
+		<article id="secc01art01">
+			<img src="img/slide.jpg">
+		</article>
+		<article id="secc01art02">
+			<span class="wecanoffer"> We can offer...</span>
+			<ul>
+				<li>Highly Competitive Prices</li>
+				<li>Variable Data</li>
+				<li>Fast Turnaround</li>
+				<li>Rapid Re-Oder Service</li>
+				<li>Wide Product Range</li>
+				<li>Low Cost Delivery</li>
+				<li>Monthly Offers</li>
+				<li>Great Customer Service</li>
+			</ul>
+		</article>
+		<img src="img/bg_offer.png" id="bgoffer">
+	</section>
 
 </body>
 </html>
