--- a/css02/INDEX.html
+++ b/css02/INDEX.html
@@ -41,6 +41,40 @@
 		</article>
 		<img src="img/bg_offer.png" id="bgoffer">
 	</section>
-
+	<section id="segundaseccion">
+		<article>
+			<span class="numerotelefono">017772 250207</span>
+		</article>
+	</section>
+	<section id="terceraseccion">
+		<article>
+		<img src="img/cerdito.png" alt=""> <span class="colorrosa">save the spring</span>
+		<br>
+		Faboluos discounts on canvas`s and roll up`s as well as many offers. <p>
+		<span class="colorrosa">Find yot more...</span>
+		</article>
+		<article>
+			<img src="img/hoja.png" alt=""> <span class="colorverde">EC0 Friendly</span>
+			<br>
+			EC0 Friendly Materials user in our production process. <br>
+			Recycle paper and paper from sustainable Forest (including FSC papers)
+			are available across our range of Printing Services.
+		</article>
+		<article>
+			<img src="img/new.png"> <span class="colorazul">Upload your file</span>
+			<br>
+			Making it easy to order your printin today. Our upload facility enables
+			you send your files directly to us. Use the notes section to inform us of your order, then sit back and wait for member of our tema contac you.
+			<p>
+			<span class="colorazul">Upload Your File Now...</span>
+		</article>
+		<article>
+			<span class="colorrosa">Stay in touch</span>
+			<br>
+			join our mailing list today <br>
+			<input type="text" placeholder="Email goes here">
+			<input type="buttom" value="send">
+		</article>
+	</section>
 </body>
 </html>
