--- a/css02/INDEX.html
+++ b/css02/INDEX.html
@@ -49,7 +49,7 @@
 	<section id="terceraseccion">
 		<article>
 		<img src="img/cerdito.png" alt=""> <span class="colorrosa">save the spring</span>
-		<br>
+		<br> 
 		Faboluos discounts on canvas`s and roll up`s as well as many offers. <p>
 		<span class="colorrosa">Find yot more...</span>
 		</article>
@@ -68,7 +68,7 @@
 			<p>
 			<span class="colorazul">Upload Your File Now...</span>
 		</article>
-		<article>
+		<article id="mailinglist">
 			<span class="colorrosa">Stay in touch</span>
 			<br>
 			join our mailing list today <br>
