--- a/calculadora.html
+++ b/calculadora.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/estiloscalculadora.css">
+	
 	<title>
 		Calculadora Basicaweeee
 	</title>
+	<link rel="stylesheet" type="text/css" href="css/estiloscalculadora.css">
+	<script src="js/calculadoraa.js"></script>
 </head>
 <body>
 <h1> Calculadora Basica</h1>
@@ -14,42 +16,42 @@
 		<table>
 			<tr>
 				<td colspan=4>
-					<input type="text" size=20 value=0 name="operando1">
+					<input type="text" size=20 value=0 name="operando1" id="operando1">
 				</td>
 			</tr>
 			<tr>
 				<td colspan=4>
-					<input type="text" size=20 value=0 name="operando2">
+					<input type="text" size=20 value=0 name="operando2" id="operando2">
 				</td>
 			</tr>
 			<tr>
 				<td colspan=4>
-					<input type="text" size=20 value=0 name="resultado">
+					<input type="text" size=20 value=0 name="resultado" id="resultado">
 				</td>
 			</tr>
 				<tr>
-					<td><input type="button" value="7" ></td>
-					<td><input type="button" value="8" ></td>
-					<td><input type="button" value="9" ></td>
-					<td><input type="button" value="*" ></td>
+					<td><input type="button" value="7" onclick="numeros('7');"></td>
+					<td><input type="button" value="8" onclick="numeros('8');"> </td>
+					<td><input type="button" value="9" onclick="numeros(this.value);"> </td>
+					<td><input type="button" value="*" onclick="operadores(this.value);"> </td>
 				</tr>
 				<tr>
-					<td><input type="button" value="4" ></td>
-					<td><input type="button" value="5" ></td>
-					<td><input type="button" value="6" ></td>
-					<td><input type="button" value="-" ></td>
+					<td><input type="button" value="4" onclick="numeros(this.value');"></td>
+					<td><input type="button" value="5" onclick="numeros(this.value);"></td>
+					<td><input type="button" value="6" onclick="numeros(this.value);"></td>
+					<td><input type="button" value="-" onclick="operadores(this.value);"></td>
 				</tr>
 				<tr>
-					<td><input type="button" value="1" ></td>
-					<td><input type="button" value="2" ></td>
-					<td><input type="button" value="3" ></td>
-					<td><input type="button" value="+" ></td>
+					<td><input type="button" value="1" onclick="numeros(this.value);"></td>
+					<td><input type="button" value="2" onclick="numeros(this.value);"></td>
+					<td><input type="button" value="3" onclick="numeros(this.value);"></td>
+					<td><input type="button" value="+" onclick="operadores(this.value);"></td>
 				</tr>
 				<tr>
-					 <td><input type="button" value="CE"></td>
-					 <td><input type="button" value="0" ></td>
-					 <td><input type="button" value="=" ></td>
-					 <td><input type="button" value="/" ></td>
+					 <td><input type="button" value="CE" onclick="limpiar(this.value);"></td>
+					 <td><input type="button" value="0" onclick="numeros(this.value);"></td>
+					 <td><input type="button" value="=" igual(); ></td>
+					 <td><input type="button" value="/" onclick="operadores(this.value);"></td>
 				</tr>
 		</table>
 	</form>
