--- a/calculadora.html
+++ b/calculadora.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="utf-8">
 	
@@ -7,7 +7,7 @@
 		Calculadora Basicaweeee
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/estiloscalculadora.css">
-	<script src="js/calculadoraa.js"></script>
+	<script src="js/calculadora.js"></script>
 </head>
 <body>
 <h1> Calculadora Basica</h1>
@@ -52,6 +52,7 @@
 					 <td><input type="button" value="0" onclick="numeros(this.value);"></td>
 					 <td><input type="button" value="=" igual(); ></td>
 					 <td><input type="button" value="/" onclick="operadores(this.value);"></td>
+					 
 				</tr>
 		</table>
 	</form>
