--- a/jquery.html
+++ b/jquery.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+<meta charset="utf-8">
 	<title>Uso JQuery</title>
-	<script type="js/jquery.js"></script>
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script src="js/eventos.js"></script>
 </head>
 <body>
-
-	<button id="DameClic">Boton de clic</button>
+<img src="" alt="" id="imgfoto">
+	<input type="text" id="txtnombre" name="">
+	<button id="dameClic">Boton de clic</button>
 </body>
 </html>
