--- a/jquery.html
+++ b/jquery.html
@@ -3,12 +3,14 @@
 <head>
 <meta charset="utf-8">
 	<title>Uso JQuery</title>
+	<link rel="stylesheet" href="css/Mijquery.css">
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script src="js/eventos.js"></script>
 </head>
 <body>
 <img src="" alt="" id="imgfoto">
 	<input type="text" id="txtnombre" name="">
+	<article id="miArticle"></article>
 	<button id="dameClic">Boton de clic</button>
 </body>
 </html>
