--- a/usuarios/index.html
+++ b/usuarios/index.html
@@ -8,11 +8,12 @@
   src="http://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
 	<header>
 		<h1>Sistema de prueba</h1>
-		<img src="">
+		<img src="imagenes/logotec.png">
 		<nav>
 			<ul>
 				<li>
