--- a/usuarios/index.html
+++ b/usuarios/index.html
@@ -22,7 +22,7 @@
 					</button>
 				</li>
 				<li>
-					<button class="btn btn-success">
+					<button class="btn btn-success" id="btnAlta">
 					<span class="glyphicon glyphicon-font" aria-hidden="true"></span>
 						Alta
 					</button>
@@ -62,5 +62,23 @@
 			</div>
 		</article>
 	</section>
+	<main>
+		<article id="artAltaUsuarios">
+			<h2>Alta de usuarios</h2>
+			<input type="text" id="txtUsuario" placeholder="Usuario" class="form-control">
+			<input type="text" id="txtNombre" placeholder="Nombre" class="form-control">
+			<input type="password" id="txtClave" placeholder="Clave" class="form-control">
+			<input type="texttipo" id="txtTipo" placeholder="Usuario" class="form-control">
+			<select name="txtTipo" id="txtTipo" class="form-controls">
+				<option value="ninguno">Seleccione una opcion</option>
+				<option value="administrados">Administrador</option>
+				<option value="invitado">Invitado</option>
+				<option value="colado">Colado</option>
+			</select>
+			<button class="btn btn-success btn-lg btn-block" id="btnGuardaUsuario">
+					Guardar
+				</button>
+		</article>
+	</main>
 </body>
 </html>
