--- a/usuarios/index.html
+++ b/usuarios/index.html
@@ -65,9 +65,9 @@
 	<main>
 		<article id="artAltaUsuarios">
 			<h2>Alta de usuarios</h2>
-			<input type="text" id="txtUsuario" placeholder="Usuario" class="form-control">
-			<input type="text" id="txtNombre" placeholder="Nombre" class="form-control">
-			<input type="password" id="txtClave" placeholder="Clave" class="form-control">
+			<input type="text" id="txtUsuarion" placeholder="Usuario" class="form-control">
+			<input type="text" id="txtNombren" placeholder="Nombre" class="form-control">
+			<input type="password" id="txtClaven" placeholder="Clave" class="form-control">
 			<input type="texttipo" id="txtTipo" placeholder="Usuario" class="form-control">
 			<select name="txtTipo" id="txtTipo" class="form-controls">
 				<option value="ninguno">Seleccione una opcion</option>
@@ -78,6 +78,13 @@
 			<button class="btn btn-success btn-lg btn-block" id="btnGuardaUsuario">
 					Guardar
 				</button>
+				<button class="btn btn-success btn-lg btn-block" id="btnBajaUsuario">
+					Baja
+				</button>
+				<button class="btn btn-success btn-lg btn-block" id="btnCambioUsuario">
+					Cambio
+				</button>
+
 		</article>
 	</main>
 </body>
