--- a/usuarios/index.html
+++ b/usuarios/index.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<meta charset="utf-8">
-	<title>Sistema de prueba</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<meta charset="UTF-8">
+	<title>Sistema de prueba</title>	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	
+	<link rel="stylesheet" href="css/estilos.css">
+	<!-- <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="js/eventos.js"></script>  
 	
-	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-  <script src="js/eventos.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
 	<header>
 		<h1>Sistema de prueba</h1>
-		<img src="imagenes/logotec.png">
+		<img src="imagenes/logo.png" alt="">
 		<nav>
 			<ul>
 				<li>
 					<button class="btn btn-default">
-					<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+						<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
 						Inicio
 					</button>
 				</li>
 				<li>
-					<button class="btn btn-success" id="btnAlta">
-					<span class="glyphicon glyphicon-font" aria-hidden="true"></span>
+					<button class="btn btn-primary" id="btnAlta">
+						<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 						Alta
 					</button>
 				</li>
 				<li>
-					<button class="btn btn-danger">
-					<span class="glyphicon glyphicon-bold" aria-hidden="true"></span>
+					<button class="btn btn-danger" id="btnBaja">
+						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 						Baja
 					</button>
 				</li>
 				<li>
-					<button class="btn btn-info">
-					<span class="glyphicon glyphicon-music" aria-hidden="true"></span>
+					<button class="btn btn-warning" id="btnCambio">
+						<span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
 						Cambio
 					</button>
 				</li>
 				<li>
-					<button class="btn btn-warning">
-					<span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+					<button class="btn btn-info">
+						<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>
 						Consulta
 					</button>
 				</li>
@@ -51,41 +52,46 @@
 	<section id="entradaUsuario">
 		<article>
 			<div class="panel panel-primary">
-  				<div class="panel-heading">
-   				 <h3 class="panel-title">Datos usuario</h3>
-  				</div>
- 			 <div class="panel-body">
-   					 <input type="text" id="txtUsuario" class="form-control" autofocus placeholder="Nombre de usuario">
-   					 <input type="password" id="txtClave" class="form-control" placeholder="Contraseña">
-   					 <button id="btnValidaUsuario" class="btn btn-primary btn-lg btn-block">Entrar</button>
-  			</div>
+			  <div class="panel-heading">
+			    <h3 class="panel-title">Datos de usuario</h3>
+			  </div>
+			  <div class="panel-body">
+			    <input type="text" id="txtUsuario" class="form-control" placeholder="Nombre de usuario" autofocus>
+			    <input type="password" id="txtClave" class="form-control" placeholder="Contraseña">
+			    <button id="btnValidaUsuario" class="btn btn-primary btn-lg btn-block">
+			    	Entrar
+			    </button>
+			  </div>
 			</div>
 		</article>
 	</section>
 	<main>
 		<article id="artAltaUsuarios">
 			<h2>Alta de usuarios</h2>
-			<input type="text" id="txtUsuarion" placeholder="Usuario" class="form-control">
-			<input type="text" id="txtNombren" placeholder="Nombre" class="form-control">
-			<input type="password" id="txtClaven" placeholder="Clave" class="form-control">
-			<input type="texttipo" id="txtTipo" placeholder="Usuario" class="form-control">
-			<select name="txtTipo" id="txtTipo" class="form-controls">
-				<option value="ninguno">Seleccione una opcion</option>
-				<option value="administrados">Administrador</option>
+			<input type="text" id="txtUsuarioNombre" placeholder="Usuario" class="form-control">
+			<input type="text" id="txtNombre" placeholder="Nombre" class="form-control">
+			<input type="password" id="txtClaveNombre" placeholder="Clave" class="form-control">
+			<select name="txtTipo" id="txtTipo" class="form-control">
+				<option value="ninguno">Seleccione una opción</option>
+				<option value="administrador">Administrador</option>
 				<option value="invitado">Invitado</option>
 				<option value="colado">Colado</option>
 			</select>
 			<button class="btn btn-success btn-lg btn-block" id="btnGuardaUsuario">
-					Guardar
-				</button>
-				<button class="btn btn-success btn-lg btn-block" id="btnBajaUsuario">
-					Baja
-				</button>
-				<button class="btn btn-success btn-lg btn-block" id="btnCambioUsuario">
-					Cambio
-				</button>
+				Guardar
+			</button>
+			<button class="btn btn-danger btn-lg btn-block" id="btnBajaUsuario">
+				Baja
+			</button>
+			<button class="btn btn-warning btn-lg btn-block" id="btnCambioUsuario">
+				Cambio
+			</button>
 
 		</article>
 	</main>
 </body>
 </html>
+
+
+
+
